keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - name: web
      port: 8080
      targetPort: web
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:22.0.1
          args: ["start-dev"]
